Chamber of Commerce v2.4 - Fixed css alignments and anchor tags for businesses.

--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -385,8 +385,8 @@ footer.bottom-details {
     font-family: var(--default-font);
     font-size: small;
     margin-top: auto;
-    padding: 0;
 
+    padding: 20px;
     width: 100%;
     height: auto;
 
@@ -413,7 +413,7 @@ div.horizontal {
 }
 
 /* Responsive adjustments */
-@media all and (max-width: 592px) {
+@media screen and (max-width: 585px) {
 
     #menu {
         font-size: 1.5rem;
@@ -454,13 +454,25 @@ div.horizontal {
 
     }
 
+    div#businesses {
+        display: flex;
+        flex-direction: column;
+        max-width: 100vw;
+    }
 
-    .container {
+    .business-labels {
+        font-size: small;
+    }
+
+    div.container {
+        display: flex;
         flex-direction: column;
         justify-content: center;
-        align-content: center;
-        align-items: left;
+        align-content: flex-start;
+        align-items: center;
         margin: 0;
+        padding: 5px;
+        max-width: 100vw;
 
     }
 
@@ -478,11 +490,17 @@ div.horizontal {
 
     aside.left-sidebar {
 
-        max-width: 100vw;
+
         height: auto;
         border-radius: 10px;
         border: 1px solid #000;
         box-shadow: 0px 2px 8px #888;
+        margin: 10px auto;
+        max-width: 100vw;
+    }
+
+    aside.left-sidebar ul {
+        padding-bottom: 20px;
     }
 
     .nav-links-wrapper {
@@ -507,9 +525,27 @@ div.horizontal {
         margin: 20px auto;
     }
 
-    div.businesses {
+    div.container p {
+        text-align: center;
+        align-items: center;
+        padding-top: 0;
+    }
 
+    div.businesses {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
+        align-items: center;
         max-width: 100vw;
+        width: 100%;
+    }
+
+    .subcontainer {
+        display: flex;
+        flex-direction: column;
+        max-width: 100vw;
+        width: 100%;
     }
 
     #business-img {
@@ -524,6 +560,10 @@ div.horizontal {
 
     .left-sidebar {
         width: 100%;
+    }
+
+    footer.bottom-details {
+        padding: 20px;
     }
 }
 
